--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+
+
+
+
+
+
+
+ASSIGNMENT1 LINK:https://manikanta-ch-git.github.io/WEB-ASSIGNMENT/
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
